[AF] Dynamic forms for forms with no name.

If the name of the form is empty, use the NameForAutofill of the first
field, if present, as the identifier to decide whether to trigger a
dynamic refill.

Bug: 841759
Change-Id: I50b024fad4cfea71bc56d97587e76d1ab09dbd4e
Reviewed-on: https://chromium-review.googlesource.com/1048634
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557875}
Former-commit-id: f32e98d77230e5c0010d7020fa659bcab628c6b6