components/autofill/core/browser/form_structure.cc
@@ -1509,4 +1509,14 @@ std::set<FormType> FormStructure::GetFormTypes() const {
   return form_types;
 }
 
+base::string16 FormStructure::GetIdentifierForRefill() const {
+  if (!form_name().empty())
+    return form_name();
+
+  if (field_count() && !field(0)->unique_name().empty())
+    return field(0)->unique_name();
+
+  return base::string16();
+}
+
 }  // namespace autofill
